--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,14 +10,13 @@
     "@types/node": "^12.20.43",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.22",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.14",
-    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "serve": "^13.0.2",
     "typescript": "~4.1.5"
   },
   "scripts": {
