--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git add . && git commit -m 'HEROKU' && git push heroku main && heroku logs --tail"
+    "deploy": "git add . && git commit -m 'HEROKU' && git push heroku master && heroku logs --tail"
   },
   "eslintConfig": {
     "extends": "react-app"
